<resources>
    <string name="app_name">FixIt</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_title">Login with facebook</string>
    <string name="login_button">Login</string>
    <string name="email_placeholder">name@example.com</string>
    <string name="password_placeholder">Password</string>
    <string name="problem_title_text">What do you want to fix?</string>
    <string name="suggest_price_title_text">Give a bid</string>
    <string name="urgent_label">Urgent</string>
    <string name="urgent_checkbox_label">Urgent</string>
    <string name="camera_button_label">Add Picture</string>
    <string name="clear_button_label">Clear</string>
    <string name="send_button_label">Send</string>
    <string name="problem_description_placeholder">Enter the problem description...</string>
    <string name="problems_board_tab_label">Problems Board</string>
    <string name="city_spinner_label">City</string>
    <string name="profession_spinner_label">Profession</string>
    <string name="problem_tab_label">Problem</string>
    <string name="bids_board_tab_label">Bids Board</string>
    <string name="fixit_tab_label">FixIt</string>
    <string name="bid_filter_hint">Search</string>
    <string name="default_date">01.01.0001</string>
    <string name="default_problem_contents">Nothing to show</string>
    <string name="default_problem_title">Title</string>
    <string name="problems_board_title">Problems Board</string>
    <string name="bids_board_title">Bids Board</string>
    <string name="intent_logged_user">com.hadarfem.fixit.LoggedUser</string>
    <string name="new_post_placeholder">Contents</string>
    <string name="new_post_title">New Post</string>
    <string name="new_post_frag_name">New Post</string>
    <string name="facebook_app_id">878849338950215</string>
    <string name="fb_login_protocol_scheme">fb878849338950215</string>
    <string name="app_subtitle">The app for cheap repairs and good service</string>
    <string name="logout_button_label">Logout</string>
    <string name="connected_label">Connected as</string>
    <string name="camera_button_label_added">Replace Picture</string>
    <string name="no_priviliges_title">Insufficient permissions.</string>
    <string name="success_title">Success</string>
    <string name="report_success_message">The problem was sent successfully</string>
    <string name="invalid_problem_title">Invalid Problem</string>
    <string name="problem_title">Enter the problem title</string>
    <string name="title_activity_suggest_price">SuggestPriceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_suggest_price_acivity">SuggestPriceAcivity</string>
    <string name="bid_description">Enter a bid ₪</string>
</resources>
