<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hadarfem.fixit.activities.SuggestPriceAcivity"
    tools:showIn="@layout/activity_suggest_price_acivity">



    <Button
        android:id="@+id/sendBidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@mipmap/ic_send"
        android:gravity="left|center_vertical"
        android:text="@string/send_button_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toRightOf="@+id/clearBidButton"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/clearBidButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:drawableLeft="@mipmap/ic_clear"
        android:gravity="left|center_vertical"
        android:text="@string/clear_button_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/sendBidButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sendBidButton"
        app:layout_constraintTop_toTopOf="@+id/sendBidButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_border"
        android:gravity="top|left"
        android:hint="@string/bid_description"
        android:inputType="textShortMessage|number"
        android:minHeight="@dimen/problem_description_min_height"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraImage"
        app:layout_constraintTop_toBottomOf="@+id/categoryView" />

    <EditText
        android:id="@+id/descriptionProblemBidText"
        android:layout_width="0dp"
        android:layout_height="92dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_border"
        android:gravity="top|left"
        android:hint="@string/problem_description_placeholder"
        android:inputType="textMultiLine|textLongMessage"
        android:minHeight="@dimen/problem_description_min_height"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemBidTitleText" />

    <ImageView
        android:id="@+id/cameraProblemImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/clearBidButton"
        app:layout_constraintEnd_toStartOf="@+id/categoryView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProblemBidText" />


    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionProblemBidText" />

    <TextView
        android:id="@+id/categoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityView" />

    <TextView
        android:id="@+id/problemBidTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
